# HTE_Anon_Tokyo

./: .gitignore  DEMO_RUNBOOK.md  PROJECT_MAP.md  README.md  pyproject.toml  pytest.ini
docs/: DEMO_RUNBOOK.md  README.md  REPO_SPLIT_PLAN.md
docs/specs/: ORIGRAPH_PROOF_BUNDLE_V1.md  origraph-proof-bundle-v1.schema.json
docs/strategy/: ORIGRAPH_APPCHAIN_STRATEGY.md  PRODUCTION_INTEGRATION.md
extension/: README.md  manifest.json  popup.html
invisible-text-watermark/tests/: conftest.py
legacy/: README.md
legacy/registry-static-html-archive/: index.html
legacy/registry-static-html-archive/registry/: anchor.html  chain.html  companies.html  demo-company.html  demo-live.html  demo-user.html  demo.html  index.html  style.css  verify.html
legacy/scratch/: test.py
origraph-landing-vercel/: README.md  index.html  styles.css
origraph-registry-demo/: .env.example  .gitignore  DEMO_RUNBOOK.md  README.md  app.py  requirements.txt
origraph-registry-demo/app/: __init__.py  config.py  main.py  models.py
origraph-registry-demo/app/api/: chat.py  registry.py
origraph-registry-demo/app/repositories/: sqlite_registry.py
origraph-registry-demo/app/services/: anchoring_service.py  chat_service.py  signing_service.py  watermark_service.py
origraph-registry-demo/frontend/: index.html  package-lock.json  package.json
origraph-registry-demo/frontend/src/: App.tsx  main.tsx  styles.css
origraph-registry-demo/frontend/src/lib/: api.ts  (+1 more)
origraph-registry-demo/tests/: test_registry.py
scripts/: bootstrap_demo.sh  check_demo.sh  reset_demo_state.sh  run_demo.sh
(+15 files in other folders)
