[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "origraph-platform-meta"
version = "0.1.0"
description = "Meta workspace configuration for Origraph components."
readme = "docs/README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
py-modules = []
